Fix mobile heading alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,7 @@ header {
 h1 {
   font-family: "Fredericka the Great", cursive;
   font-size: 3.6em;
+  text-align: center;
   color: $color1;
   font-weight: lighter;
   margin: 0;
